tests/baselines/reference/numericNamedPropertyDuplicates.errors.txt
==== tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.ts (6 errors) ====
    class C {
        1: number;
        1.0: number;
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
        static 2: number;
        static 2: number;
               ~
!!! error TS2300: Duplicate identifier '2'.
    }
    
    interface I {
        2: number;
        2.: number;
        ~~
!!! error TS2300: Duplicate identifier '2.'.
    }
    
    var a: {
        1: number;
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var b = {
        2: 1
        2: 1
        ~
!!! error TS1005: ',' expected.
        ~
!!! error TS2300: Duplicate identifier '2'.
    }